# mate

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  docker-compose.yml
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs  storage.rs  task.rs
crates/fifo/: Cargo.toml
crates/fifo/src/: lib.rs  message.rs  proto.rs
crates/mate/: Cargo.toml
crates/mate/src/: client.rs  executor.rs  job.rs  lib.rs  repl.rs  scheduler.rs
crates/mate/src/client/: mod.rs
crates/mate/src/ipc/: mod.rs  npipe.rs
crates/mate/src/scheduler/: mod.rs
crates/mate/src/scheduler/backend/: redis.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  server.rs  task.rs
crates/scheduler/src/backend/: redis.rs
src/: client.rs  executor.rs  job.rs  lib.rs  repl.rs
src/scheduler/: mod.rs  redis.rs
