[package]
name = "mate"
version = "0.1.0-draft+1"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
description = "Job Queue"
repository = "https://github.com/mate-rs/mate"
categories = ["web-programming"]
keywords = ["queue", "job", "worker"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "mate"
path = "src/lib.rs"

[[bin]]
name = "mate"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
