[workspace]
members = [
    "crates/executor",
    "crates/mate",
    "crates/scheduler",
]
default-members = ["crates/mate"]
resolver = "1"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = "4.5.20"
redis = "0.27"
tokio = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

mate = { path = "./crates/mate" }
