[workspace]
members = [
    "crates/executor",
    "crates/fifo",
    "crates/mate",
    "crates/proto",
    "crates/scheduler",
]
default-members = [
    "crates/mate",
    "crates/scheduler",
]
resolver = "1"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3.3"
bson = "2.13.0"
clap = "4.5.20"
ipc-channel = "0.19.0"
libc = "0.2.161"
redis = "0.27"
serde = "1.0.210"
tempfile = "3.13.0"
tokio = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

mate-fifo = { path = "./crates/fifo" }
mate = { path = "./crates/mate" }
mate-proto = { path = "./crates/proto" }
