[package]
name = "mate-fifo"
version = "0.1.0-draft+1"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
description = "FIFO Implementation for Mate IPC"
repository = "https://github.com/mate-rs/mate"
categories = ["web-programming"]
keywords = ["queue", "job", "worker"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
libc = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
