[package]
name = "mate-proto"
version = "0.1.0-draft+1"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
description = "Protocol definitions for Mate"
repository = "https://github.com/mate-rs/mate"
categories = ["web-programming"]
keywords = ["queue", "job", "worker"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
