[package]
name = "mate-scheduler"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "mate_scheduler"
path = "src/lib.rs"

[[bin]]
name = "mate-scheduler"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

mate = { workspace = true }
