[package]
name = "mate-scheduler"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "mate_scheduler"
path = "src/lib.rs"

[[bin]]
name = "mate-scheduler"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "std"] }
redis = { workspace = true, features = ["tokio-comp"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

mate = { workspace = true }
mate-fifo = { workspace = true }
mate-proto = { workspace = true }
